# cnn_cuda

./: .gitignore  CMakeLists.txt  CNN_Cuda.cpp  Conv_Cuda.cu  Datasets.cpp  Datasets.cu  MLP_Cuda.cu  README.md  activation_utils.cu  activation_utils.h  cnn_cuda.sln  cnn_cuda.vcxproj  convblock.cu  cuda_tensor.cu  cuda_tensor.h  filters.cu  image_loader.cpp  install_cuda.sh  main.cpp  main.cu  mlp.cpp  mlp.cu  mlp.h  tensor.h  test.cpp  test.cu  test_1.cpp  test_1.cu  test_2.cu  test_cnn.cu  test_conv.cu  test_mlp.cu  utilities_kernel.cu
cnn_cuda/x64/Debug/: cnn_cuda.exe.recipe  cnn_cuda.ilk  cuda_tensor.cu.cache  cuda_tensor.cu1640507599.deps  vc143.idb
cnn_cuda/x64/Debug/cnn_cuda.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  cnn_cuda.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
include/: CNN_Cuda.h  Conv_Cuda.h  Datasets.cuh  Datasets.h  MLP_Cuda.h  activation_utils.cuh  activation_utils.h  cnn.cuh  convblock.cuh  cuda_tensor.cuh  cuda_tensor.h  filters.h  image_loader.h  layers.h  mlp.h  tensor.h  utilities_kernel.h
test/: testMLP.cu  test_CNN.cu  test_cnn_cuda.cu  test_dataloader.cu  test_matrixmul.cu  test_mlp.cpp
